external-crates/move/crates/move-package-alt/tests/data/manifest_parsing_invalid/unknown_toplevel_field/Move.snap
---
source: crates/move-package-alt/tests/manifest_parsing_tests.rs
---
TOML parse error at line 10, column 2
   |
10 | [unknown_field]
   |  ^^^^^^^^^^^^^
unknown field `unknown_field`, expected one of `package`, `environments`, `dependencies`, `dep-overrides`
